# set-fire-to-emoji

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Justfile  Makefile  README.md
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/wiwa-essentials/: devcontainer-feature.json  install.sh
.github/workflows/: README.md  deploy.yml
infra/: .gitignore  DEPLOYMENT.md  README.md  cdk.json  package-lock.json  package.json
infra/lib/: certificate-stack.ts  dns-stack.ts  forwardHostFunction.js  github-oidc-stack.ts  infra-stack.ts  oidc-stack.ts  settings.ts
src/: gunicorn.conf.py  pyproject.toml  setup.cfg
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: forms.py  middleware.py  models.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/core/templates/core/: base.html  index.html  tempfile_detail.html  tempfile_form.html
src/core/templates/core/includes/: tool_entry.html
