[tool.poetry]
name = "lambda-set-fire-to-gif"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.6"
django-storages = { extras = ["s3"], version = "^1.14.2" }
django-environ = "^0.11.2"
Pillow = "^10.1.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
whitenoise = "^6.6.0"
django-migrate-middleware = "^1.0.0"
gunicorn = "^22.0.0"
django-structlog = "^8.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
django-stubs = { extras = ["compatible-mypy"], version = "^1.12.0" }
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.isort]
profile = "black"
skip = ["node_modules", "migrations"]

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | migrations
    | manage
  )/
)
'''
