[project]
name = "lambda-set-fire-to-gif"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
  "django-environ>=0.11.2",
  "django==4.2.*",
  "pillow>=10.1.0",
  "django-crispy-forms>=1.14.0",
  "crispy-bootstrap5>=0.6",
  "whitenoise>=6.6.0",
  "django-migrate-middleware>=3.0.0",
  "gunicorn>=22.0.0",
  "django-storages[s3]==1.14.2",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.1", "django-stubs>=5.0.4", "ipython>=8.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
