[project]
name = "lambda-set-fire-to-gif"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = [
  "django-environ>=0.11.2",
  "django==4.2.*",
  "django-crispy-forms>=1.14.0",
  "crispy-bootstrap5>=0.6",
  "whitenoise>=6.6.0",
  "django-migrate-middleware>=3.0.0",
  "gunicorn>=22.0.0",
  "django-storages[s3]>=1.14.2",
  "pillow>=10.4.0",
]

[dependency-groups]
dev = ["ruff>=0.6.1", "ty>=0.0.11", "ipython>=8.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ty]
# ty configuration - Django plugin support not yet available
# ty uses project Python version from requires-python above
